[package]
name = "danbooru_meta_api"
version = "0.1.0"
authors = ["r1cebank <siyuangao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
log = "0.4.0"
env_logger = "0.7.1"
rusqlite = "0.21.0"
