[package]
name = "danbooru_meta_api"
version = "0.1.0"
authors = ["r1cebank <siyuangao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.9.0"
log = "0.4.0"
env_logger = "0.7.1"
serde_json = "1.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
diesel = { version="1.4.3", features = ["sqlite"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json", "diesel_sqlite_pool"] }
